# vvAgentSystem

./: .gitignore  AI_VISIBILITY_OVERHAUL.md  GEO_AGENT_SYSTEM.md  GEO_TECHNICAL_DESIGN.md  PROJECT_STATE.md  Procfile  jaredkadendemand.md
agents/: .env.example  audit.py  implement.py  nixpacks.toml  pyproject.toml  railway.json  recommend.py  requirements.txt  run.py  scout.py  server.py
agents/scripts/: reset_client_data.py
agents/src/: __main__.py  auditor.py  classifier.py  detection.py  drift.py  gsc.py  output.py  parsers.py  recommender.py  reddit_scout.py  renderer.py  retry.py  scorers.py  stability.py  tracker.py  upload.py
agents/src/engines/: __init__.py  chatgpt.py  claude.py  (+2 more)
agents/tests/: test_auditor.py  test_auto_approve.py  test_card_generator.py  test_card_qa.py  test_classifier.py  test_community.py  test_community_check.py  test_competitive_gaps.py  test_crawlability.py  test_dependency_metadata.py  test_detection.py  test_drift.py  test_gap_check.py  test_github_impl.py  test_graph_nodes.py  test_gsc.py  test_improvement_pipeline.py  test_improvement_run_migration.py  test_intent_aggregation.py  test_inventory.py  test_matcher.py  test_mention_classification.py  test_multi_run_tracker.py  test_output.py  test_parsers.py  test_pipeline.py  test_recommender.py  test_reddit_scout.py  test_reddit_scout_v2.py  test_renderer.py  test_reset_client_data.py  test_scorer.py  test_scorers.py  test_server.py  test_stability.py  test_tracker_concurrency.py  test_unified_manual_config_migration.py  test_upload.py  test_validators.py  test_verifier.py  (+2 more)
(+332 files in other folders)
