[project]
name = "geo-tracker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.82.0",
    "anthropic>=0.52.0",
    "google-genai>=1.14.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "playwright>=1.49.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
